--- a/Finder/design.ui
+++ b/Finder/design.ui
@@ -31,6 +31,10 @@
   <property name="windowTitle">
    <string>MemoryFinder</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icon.ico</normaloff>icon.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">QWidget {
 	font: 12pt &quot;Classic Console Neue&quot;;
@@ -42,6 +46,15 @@
   </property>
   <property name="locale">
    <locale language="English" country="UnitedStates"/>
+  </property>
+  <property name="iconSize">
+   <size>
+    <width>32</width>
+    <height>32</height>
+   </size>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
   </property>
   <property name="animated">
    <bool>false</bool>
