--- a/Finder/design.ui
+++ b/Finder/design.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MemoryFinder</string>
+   <string>Madoi's memory</string>
   </property>
   <property name="windowIcon">
    <iconset>
